# britify

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  texts.csv
.github/workflows/: release.yml  test.yml
src/: cli.rs  lib.rs  main.rs  styles.rs  translator.rs
