[package]
name = "britify"
version = "0.0.0"
edition = "2018"

[dependencies]
async-openai = "0.13.0"
clap = "2.33.3"
reqwest = "0.11.3"
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
serde = "1.0.125"
serde_derive = "1.0.125"

[dev-dependencies]
mockall = "0.10.2"